optimized Executive data structures with ArrayDeque for fast queing.  unit tests seem mostly back to normal so this is probably correct